tests/fixtures/invalid/str_sub_float.py
# Cannot subtract Str and Float
x: float = "hello" - 1.0
